# canonical_assignment

./: README.md
ubunto_cloud_image_fetcher/: CMakeLists.txt
ubunto_cloud_image_fetcher/include/: CloudImageInfo.h  SimplestreamsParser.h
ubunto_cloud_image_fetcher/src/: CloudImageInfo.cpp  SimplestreamsParser.cpp  main.cpp
